# openconnect-sso

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
openconnect_sso/: app.py  cli.py  config.py
openconnect_sso/browser/: webengine_process.py
