[tool.poetry]
name = "openconnect-sso"
version = "0.8.2"
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
license = "GPL-3.0-only"
authors = ["László Vaskó <laszlo.vasko@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/vlaci/openconnect-sso"
repository = "https://github.com/vlaci/openconnect-sso"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]

[tool.poetry.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
attrs = ">=18.2"
colorama = "^0.4"
importlib-metadata = { version = "^3.10.0", python = "<3.8" }
lxml = "^4.3"
keyring = ">=21.1, <24.0.0"
prompt-toolkit = "^3.0.3"
pyxdg = ">=0.26, <0.28"
requests = "^2.22"
structlog = ">=20.1"
toml = "^0.10"
setuptools = ">40.0"
PyQt6 = "^6.3.0"
PyQt6-WebEngine = "^6.3.0"
PySocks = "^1.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
